--- a/force-app/main/default/classes/ResourcesDetailRemote.cls
+++ b/force-app/main/default/classes/ResourcesDetailRemote.cls
@@ -4,11 +4,16 @@
 public with sharing class ResourcesDetailRemote {
 
     @AuraEnabled
-    public static List<ResourceService.ResourceWrapper> getResourcesById(String resourceId) {
+    public static ResourceService.ResourceWrapperContainer getResourcesById(String resourceId, String resourceType) {
 
-        System.debug('Id resource: ' + resourceId);
-        ResourceService resourceService = (ResourceService) ClassFactory.newInstance(ResourceService.class);
-        return resourceService.getResourcesById(resourceId);
+        try {
+            System.debug('Id resource: ' + resourceId);
+            ResourceService resourceService = (ResourceService) ClassFactory.newInstance(ResourceService.class);
+            return resourceService.getResourcesById(resourceId, resourceType);
+        } catch (Exception e) {
+            AuraHelper.throwException(e);
+        }
+        return null;
     }
 
 }
