--- a/force-app/main/default/classes/ResourceRemote.cls
+++ b/force-app/main/default/classes/ResourceRemote.cls
@@ -71,15 +71,22 @@ public with sharing class ResourceRemote {
 
     @AuraEnabled
     public static String getNoTAMessage() {
-        ParticipantService.ParticipantState state = ParticipantService.getParticipantState();
-        ResourceService resourceService = (ResourceService) ClassFactory.newInstance(ResourceService.class);
-        Participant__c currentParticipant = resourceService.getParticipant();
-        if((state.value == ParticipantService.ParticipantStates.ALUMNI) && (currentParticipant.Conditions__c == 0)) {
-            String noTAMessage;
-            String message = Label.Resources_No_Therapeutic_Area;
-            String goToProfile = '<br /><a href="/s/settings?tab=account-settings">' + Label.Resources_Go_To_Your_Profile + '</a>';
-            noTAMessage = String.format(message, new List<String>{goToProfile});
-            return noTAMessage;
+
+        try {
+            ParticipantService.ParticipantState state = ParticipantService.getParticipantState();
+            ResourceService resourceService = (ResourceService) ClassFactory.newInstance(ResourceService.class);
+            Participant__c currentParticipant = resourceService.getParticipant();
+            if ((state.value == ParticipantService.ParticipantStates.ALUMNI) && (currentParticipant.Conditions__c == 0)) {
+                String noTAMessage;
+                String message = Label.Resources_No_Therapeutic_Area;
+                String goToProfile = '<br /><a href="/s/settings?tab=account-settings">' + Label.Resources_Go_To_Your_Profile + '</a>';
+                noTAMessage = String.format(message, new List<String>{
+                        goToProfile
+                });
+                return noTAMessage;
+            }
+        } catch (Exception e) {
+            AuraHelper.throwException(e);
         }
         return null;
     }
