--- a/force-app/main/default/classes/StudyTrialService.cls
+++ b/force-app/main/default/classes/StudyTrialService.cls
@@ -176,7 +176,7 @@ public without sharing class StudyTrialService {
                 }
             }
             if (minDistance != null) {
-                trialIdToDistanceString.put(currTrialId, DistanceHelper.roundDouble(minDistance) + ' ' + DistanceHelper.getUnitsOfMeasurement());
+                trialIdToDistanceString.put(currTrialId, DistanceHelper.roundDouble(minDistance) + '&nbsp;' + DistanceHelper.getUnitsOfMeasurementLabel());
             }
         }
 
