Show Study Visit table by condition. Refactor

--- a/force-app/main/default/classes/HomePageParticipantRemote.cls
+++ b/force-app/main/default/classes/HomePageParticipantRemote.cls
@@ -6,21 +6,22 @@ public class HomePageParticipantRemote {
     
     public class InitData{
         public Participant_Enrollment__c pe;
+        public Participant_Study_Enrollment__c pse;
         public String name;
     }
     
     @AuraEnabled
     public static String getInitData(){
         try{
-            List<Participant_Enrollment__c> peList = ParticipantEnrollmentService.getParticipantEnrollmentsForParticipant();
+            ParticipantService.ParticipantState state = ParticipantService.getParticipantState();
             InitData initData = new InitData();
-            if(peList.size() > 0){
-                initData.pe = peList[0];
-            }
-            if(ParticipantService.getParticipantState().isDelegate) {
+            initData.pe = state.pe;
+            initData.pse = state.pse;
+
+            if(state.isDelegate) {
                 initData.name = (String) CommunityService.getUserContact().get('Name');
             } else {
-                initData.name = peList[0].Participant__r.Full_Name__c;
+                initData.name = state.pe.Participant__r.Full_Name__c;
             }
 
             return JSON.serialize(initData);
