--- a/force-app/main/default/classes/TasksRemote.cls
+++ b/force-app/main/default/classes/TasksRemote.cls
@@ -16,17 +16,33 @@ public class TasksRemote {
     
     public class ParticipantTasks{
         @AuraEnabled
-        public List<Task> openTasks;
+        public List<OpenTask> openTasksWrapper;
         @AuraEnabled
         public List<Task> completedTasks;
+    }
+
+    public class OpenTask{
+        @AuraEnabled
+        public Task openTask;
+        @AuraEnabled
+        public String originator;
     }
     
     @AuraEnabled
     public static ParticipantTasks getParticipantTasks(){
         try{
             ParticipantTasks participantTasks = new ParticipantTasks();
-            participantTasks.openTasks = TaskService.getOpenTasks();
+            List<Task> openTasks = new List<Task>();
+            openTasks = TaskService.getOpenTasks();
+            participantTasks.openTasksWrapper = new List<OpenTask>();
+            for(Task task : openTasks){
+                OpenTask taskWrapper = new OpenTask();
+                taskWrapper.openTask = task;
+                participantTasks.openTasksWrapper.add(taskWrapper);
+            }
+
             participantTasks.completedTasks = TaskService.getCompletedTasks();
+            createOriginatorsList(participantTasks.openTasksWrapper);
             return participantTasks;
         }catch (Exception e){
             AuraHelper.throwException(e);
@@ -38,6 +54,25 @@ public class TasksRemote {
     public static ParticipantTasks ignoreTask(Id taskId){
         TaskService.ignoreTask(taskId);
         return getParticipantTasks();
+    }
+
+    private static void createOriginatorsList(List<OpenTask> tasks) {
+        Id participantId;
+        Set<Id> delegateIds = new Set<Id>(PatientDelegateService.getDelegatedParticipantUserIds());
+        if(ParticipantService.getParticipantState().isDelegate){
+            participantId = PatientDelegateService.getDelegatePatientUserId();
+        } else {
+            participantId = UserInfo.getUserId();
+        }
+        for(OpenTask taskWrapper : tasks){
+            if(taskWrapper.openTask.CreatedById == participantId){
+                taskWrapper.originator = Label.Patient;
+            } else if(delegateIds.contains(taskWrapper.openTask.CreatedById)){
+                taskWrapper.originator = Label.Delegate;
+            } else {
+                taskWrapper.originator = Label.Admin;
+            }
+        }
     }
     
     @AuraEnabled
