Add visible to task

--- a/force-app/main/default/classes/ManualTaskRemote.cls
+++ b/force-app/main/default/classes/ManualTaskRemote.cls
@@ -24,11 +24,13 @@ public with sharing class ManualTaskRemote {
             List<User> users = taskFilter.getUsers();
             List<Task> tasks = new List<Task>();
             for (User user : users)
-                tasks.add(new Task(OwnerId = user.Id,
-                        Subject = newTask.Subject,
-                        Priority = newTask.Priority,
-                        Start_Date__c = newTask.Start_Date__c,
-                        ActivityDate = newTask.ActivityDate)
+                tasks.add(
+                        new Task(OwnerId = user.Id,
+                                 Subject = newTask.Subject,
+                                 Priority = newTask.Priority,
+                                 Start_Date__c = newTask.Start_Date__c,
+                                 ActivityDate = newTask.ActivityDate,
+                                 Visible_For__c = newTask.Visible_For__c)
                 );
 
             insert tasks;
@@ -63,6 +65,7 @@ public with sharing class ManualTaskRemote {
         public Task task;
         public ManualTaskFilter filters;
         public List<LabelValueItem> priorities;
+        public List<LabelValueItem> visibility;
 
         public InitData() {
             task = new Task();
@@ -73,6 +76,11 @@ public with sharing class ManualTaskRemote {
             priorities = new List<LabelValueItem>();
             priorities.add(new LabelValueItem('Not selected', 'Normal'));
             priorities.add(new LabelValueItem('Critical', 'Critical'));
+
+            visibility = new List<LabelValueItem>();
+            visibility.add(new LabelValueItem('All', 'Owner;Delegates'));
+            visibility.add(new LabelValueItem('Patients only', 'Owner'));
+            visibility.add(new LabelValueItem('Delegates only', 'Delegates'));
         }
     }
 }
