--- a/force-app/main/default/classes/ResourceTriggerHandler.cls
+++ b/force-app/main/default/classes/ResourceTriggerHandler.cls
@@ -5,13 +5,24 @@
 public with sharing class ResourceTriggerHandler extends TriggerHandler {
 
     public override void beforeInsert(List<SObject> newList) {
-        ArticleService.addDefaultImage(newList);
-        ArticleService.calculateExpirationDateBeforeInsert(newList);
+        ArticleService articleService = (ArticleService) ClassFactory.newInstance(ArticleService.class);
+        articleService.addDefaultImage(newList);
+        articleService.calculateExpirationDateBeforeInsert(newList);
     }
 
     public override void beforeUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
-        ArticleService.addDefaultImage(newList);
-        ArticleService.calculateExpirationDateBeforeUpdate(newList, (Map<Id, Resource__c>) oldMap);
+        ArticleService articleService = (ArticleService) ClassFactory.newInstance(ArticleService.class);
+        articleService.addDefaultImage(newList);
+        articleService.calculateExpirationDateBeforeUpdate(newList, (Map<Id, Resource__c>) oldMap);
     }
 
+    public override void afterInsert(List<SObject> newList) {
+        ArticleService articleService = (ArticleService) ClassFactory.newInstance(ArticleService.class);
+        articleService.processTherapeuticAreasAfterInsert(newList);
+    }
+
+    public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+        ArticleService articleService = (ArticleService) ClassFactory.newInstance(ArticleService.class);
+        articleService.processTherapeuticAreasAfterUpdate(newList, (Map<Id, Resource__c>) oldMap);
+    }
 }
