--- a/force-app/main/default/classes/TherapeuticAreaPatientTriggerHandler.cls
+++ b/force-app/main/default/classes/TherapeuticAreaPatientTriggerHandler.cls
@@ -4,6 +4,6 @@
 public with sharing class TherapeuticAreaPatientTriggerHandler  extends TriggerHandler {
 
     public override void beforeInsert(List<SObject> newList) {
-        TherapeuticAreaService.validationOnDuplicate(newList);
+        TherapeuticAreaPatientService.validationOnDuplicate(newList);
     }
 }
